# BaseballStatisticalCalculator

./: LICENSE  README.md  main.py  pyproject.toml
.streamlit/: config.toml
app/: calculator.py
